# ravestick

./: BB-INMP441-00A0.dts  README.md  main.py  pyproject.toml
ravestick/: audio.py  config.py  displays.py  effects.py  visualizer.py
ravestick/config/: __init__.py
ravestick/templates/: index.html
